tests/compile_fail/resolver_unresolvable.stderr
error: Unresolvable definition "meters".
  --> tests/compile_fail/resolver_unresolvable.rs:10:11
   |
10 |     unit (meters, "m") = 0.001 * kilometers,
   |           ^^^^^^
   |
   = help: Remove recursive definitions.

error: Unresolvable definition "kilometers".
  --> tests/compile_fail/resolver_unresolvable.rs:11:11
   |
11 |     unit (kilometers, "km") = 1000.0 * meters,
   |           ^^^^^^^^^^
   |
   = help: Remove recursive definitions.
